--- a/css/bestPlay.css
+++ b/css/bestPlay.css
@@ -10,9 +10,10 @@
 }
 
 #allVid{
-    width: 80%;
+    width: 100%;
     margin: auto;
-    margin-top: 10px;   
+    margin-top: 10px;
+    margin-left: 38px;   
 }
 
 #allVid div{
