--- a/css/bestPlay.css
+++ b/css/bestPlay.css
@@ -6,7 +6,10 @@
     text-align: center;
     font-size: 25pt;
     font-weight: bolder;
-    
+    color: white;
+}
+body{
+    max-width: 100%;
 }
 
 #allVid{
@@ -18,5 +21,8 @@
 
 #allVid div{
     display: inline;
-    margin-bottom: 100px;
+}
+
+#allVid div video{
+
 }
