--- a/css/faq.css
+++ b/css/faq.css
@@ -1,6 +1,9 @@
 .content{
     width: 80%;
     margin: auto;
+    background: rgba(255, 255, 255, 0.7);
+    padding: 50px;
+    margin-top: 40px;
 }
 .content h1{
     margin-top: 40px;
@@ -9,5 +12,5 @@
 }
 .content a{
     text-decoration: none;
-    color: blue;
+    color: rgb(140, 0, 255);
 }
