--- a/css/faq.css
+++ b/css/faq.css
@@ -1,16 +1,28 @@
 .content{
     width: 80%;
     margin: auto;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(151, 149, 149, 0.7);
     padding: 50px;
     margin-top: 40px;
 }
 .content h1{
     margin-top: 40px;
-    font-size: 25pt;
+    font-size: 40pt;
     font-weight: bolder;
+    text-align: center;
 }
 .content a{
     text-decoration: none;
     color: rgb(140, 0, 255);
+}
+news{
+    
+}
+.news img{
+    width: 80%;
+}
+.news img:hover{
+    width: 85%;
+    transition: 0.5s;
+    background: rgba(151, 149, 149, 0.7);
 }
